# decNumber-icu-368

./: .travis.yml  .travis_build.sh  BUILDING  CMakeLists.txt  README.md  build  build.cmd  decNumber.pc.in  platform.h.in  platform.h.in.Windows
include/: decBasic.h  decContext.h  decDPD.h  decDouble.h  decNumber.h  decNumberLocal.h  decPacked.h  decQuad.h  decSingle.h  decimal128.h  decimal32.h  decimal64.h
source/: decContext.c  decDouble.c  decNumber.c  decPacked.c  decQuad.c  decSingle.c  decimal128.c  decimal32.c  decimal64.c
